# engstats

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
notebooks/: 01_descriptive_stats.ipynb  04_linear_regression.ipynb  engstats_for_students.ipynb
src/engstats/: __init__.py
src/engstats/analysis/: __init__.py  correlation.py  descriptive.py  inference.py  probability.py  regression.py
src/engstats/data/: bridges.csv  circuits.csv  concrete.csv  index.json
src/engstats/plots/: __init__.py  categorical.py  distributions.py  multivariate.py  probability.py  regression.py  theme.py
src/engstats/utils/: __init__.py  formatting.py  io.py  validation.py
tests/: test_descriptive.py  test_inference.py  test_plots.py  test_regression.py
