[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project]
name = "engstats"
version = "0.1.0"
authors = [
    {name = "Moses Y.-H. Chan", email = "moses.chan@northwestern.edu"},
    ]
description = "A companion package for probability and statistics for engineers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["engstats*"]

[tool.setuptools.package-data]
"engstats.data" = ["*.csv", "*.json"]
