[build-system]
requires = ["uv_build >= 0.10.10, <0.11.8"]
build-backend = "uv_build"

[project]
name = "engstats"
version = "0.2.2"
authors = [
    {name = "Moses Y.-H. Chan", email = "moses.chan@northwestern.edu"},
    ]
description = "A companion package for probability and statistics for engineers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "ipykernel>=6.17.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["engstats*"]

[tool.setuptools.package-data]
"engstats.data" = ["*.csv", "*.json"]
